--- a/BioCro/DARPA/upload_params.Rmd
+++ b/BioCro/DARPA/upload_params.Rmd
@@ -22,9 +22,10 @@ Read in parameters data from [sentinel-detection repository](https://github.com/
 all_parameters <- read.csv("../../../sentinel-detection/parameters_pipeline/outputs/parameters_data.csv")
 ```
 
-Read in previous phys_parameters.csv. 
+Read in previous phys_parameters.csv; will need for latest data. 
 ```{r}
 phys <- read.csv("upload_params_data/phys_parameters.csv")
+phys$local_datetime <- as.POSIXct(phys$local_datetime)
 ```
 
 Clean up data to have the final columns: 
@@ -39,35 +40,37 @@ Clean up data to have the final columns:
 8. `n`: sample size, always set to 1
 9. `SE`: estimated standard error of physiological parameters from parameters_data.csv
 10. `notes`: records which row in the parameters_data.csv the record came from
-11. `access_level`: Internal & Collaborators
+11. `access_level`: 2, equivalent to Internal & Collaborators
 
 First, manage the chamber experiment parameters:
 ```{r}
 upload_parameters <- all_parameters %>% 
-  dplyr::mutate(notes = paste("row", row_number(), "in parameters_data.csv")) %>% 
+  #dplyr::mutate(notes = paste("row", row_number(), "in parameters_data.csv")) %>% 
   filter(Genotype == "ME034", 
          trait %in% c("vmax", "Rd", "AQY", "g1BB", "g0BB")) %>% 
-  mutate(Date = as.POSIXct(as.character(Date), format = "%Y%m%d"), 
+  mutate(date = as.POSIXct(as.character(Date), format = "%Y%m%d"), 
          treatment = case_when(Treatment == "31_22_250" ~ "regular night temperature", 
                                Treatment == "31_31_250" ~ "high night temperature", 
                                Treatment == "31_22_450" ~ "high light",
                                Treatment == "greenhouse" ~ "greenhouse",
                                Treatment == "outdoor_5cm" ~ "outdoor 5 cm density",
-                               Treatment == "outdoor_JollyG" ~ "outdoor 5 cm density"),
+                               Treatment == "outdoor_JollyG" ~ "outdoor JollyG soil"),
          site = case_when(Treatment == "31_22_250" ~ "Donald Danforth Plant Science Center Growth Chamber", 
                                Treatment == "31_31_250" ~ "Donald Danforth Plant Science Center Growth Chamber", 
                                Treatment == "31_22_450" ~ "Donald Danforth Plant Science Center Growth Chamber",
                                Treatment == "greenhouse" ~ "Donald Danforth Plant Science Center Greenhouse",
                                Treatment == "outdoor_5cm" ~ "Donald Danforth Plant Science Center Outdoor",
-                               Treatment == "outdoor_JollyG" ~ "Donald Danforth Plant Science Center Outdoor")) %>% 
-  select(-ID, -rep, -SD, -Date.run, -Genotype, -A_Ci, -A_Qin, -Rd, -Treatment) %>% 
-  spread(trait, Value) %>% 
-  dplyr::rename(local_datetime = Date, 
-         Vcmax = vmax, 
-         leaf_respiration_rate_m2 = Rd, 
-         quantum_efficiency = AQY,
-         stomatal_slope.BB = g1BB,
-         cuticular_cond = g0BB) %>% 
+                               Treatment == "outdoor_JollyG" ~ "Donald Danforth Plant Science Center Outdoor"),
+         variable = case_when(trait == "vmax" ~ "Vcmax", 
+                           trait == "Rd" ~ "leaf_respiration_rate_m2",
+                           trait == "AQY" ~ "quantum_efficiency",
+                           trait == "g1BB" ~ "stomatal_slope.BB",
+                           trait == "g0BB" ~ "cuticular_cond"),
+         mean = round(Value, 3),
+         SE = round(SE,3)) %>% 
+  select(-ID, -SD, -Date.run, -Genotype, -A_Ci, -A_Qin, -Rd, -Treatment, -Value, -trait) %>% 
+  #spread(Trait, value) %>% 
+  dplyr::rename(local_datetime = date) %>% 
   mutate(leafT = 25, 
          n = 1,
          species = "Setaria viridis",
@@ -75,27 +78,71 @@ upload_parameters <- all_parameters %>%
          citation_author = "Zhang, Gehan, LeBauer, Riemer, Tarin, Vargas",
          citation_year = "2018", 
          citation_title = "Unpublished DARPA experimental data",
-         access_level = "Internal & Collaborators"
+         access_level = "2" 
          ) %>%
   select(citation_author, citation_year, citation_title, 
-         species, cultivar, site, treatment, local_datetime,
-         Vcmax, leaf_respiration_rate_m2, quantum_efficiency, stomatal_slope.BB, cuticular_cond,
-         leafT, n, SE, notes, access_level)
+         species, cultivar, site, treatment, local_datetime, Date, rep,
+         #Vcmax, leaf_respiration_rate_m2, quantum_efficiency, stomatal_slope.BB, cuticular_cond,
+         variable, mean, 
+         leafT, n, SE, access_level) %>%
+  replace(., is.na(.), "")
+```
+
+Add a unique entity comprising of date, treatement, and rep
+```{r}
+upload_parameters$entity <- paste0(upload_parameters$Date, "_", upload_parameters$treatment, "_",
+                                   upload_parameters$rep)
 ```
 
 Save cleaned parameter as a .csv file in `upload_params_data` folder in `model-vignettes/BioCro/DARPA`. 
 ```{r}
-if(!dir.exists("upload_params_data/")){
-  dir.create("upload_params_data")
-}
-
-write.csv(upload_parameters_ch, "upload_params_data/phys_parameters.csv", row.names = FALSE)
+write.csv(upload_parameters, "upload_params_data/phys_parameters.csv", row.names = FALSE)
 ```
 
 
+Split dataframe, first by new data since last  upload, then by parameter.  
+```{r}
+#create new folder with date
+dname <- gsub('-', '', grep(max(upload_parameters$local_datetime), pattern = "(\\D+)", value = T))
+
+if(!dir.exists(paste0("upload_params_data/", dname))){
+  dir.create(paste0("upload_params_data/", dname))
+}
+newdir <- paste0("upload_params_data/", dname)
+
+#subset by date
+sub <- subset(upload_parameters, local_datetime > max(phys$local_datetime))
+write.csv(sub, file = paste0(newdir, "/upload_parameters.csv"), row.names = F)
+
+#split dataframe for each parameter type and save each dataframe as a csv 
+params <- c("Vcmax", "leaf_respiration_rate_m2", "quantum_efficiency", "stomatal_slope.BB", "cuticular_cond")
+for(p in params){
+  trait_df <- upload_parameters %>%
+    filter(variable == p) %>%
+    spread(variable, mean)
+  
+  # If Vcmax, rename columns n and SE 
+  if(p == "Vcmax") {
+    trait_df2 <- trait_df %>% dplyr::rename(Sample.size = n, Std.err = SE)} else {
+      trait_df2 <- trait_df}
+  
+  write.csv(trait_df2, paste0(newdir, "/phys_parameters_", p, ".csv"), row.names = FALSE)
+}
+```
+
 Upload that new parameter data file using the API. 
 ```{bash}
-curl -X POST --data-binary @upload_params_data/phys_parameters welsch.cyverse.org:8787/bety/api/v1/traits.csv?key=<fOME9Ga8VMGmieLfuFD2QDgvFbWHqMUBthXEYkjz> -H "Content-Type: text/csv"
+cd /home/jessicaguo/model-vignettes/BioCro/DARPA/upload_params_data
+
+curl -X POST --data-binary @20200905/phys_parameters_Vcmax.csv http://welsch.cyverse.org:8000/bety/api/v1/traits.csv?key=uaZWRQT44fQVzDbxOET03EZJGXiEX9yUDEDiDwe4 -H "Content-Type: text/csv"
+
+curl -X POST --data-binary @20200905/phys_parameters_leaf_respiration_rate_m2.csv http://welsch.cyverse.org:8000/bety/api/v1/traits.csv?key=uaZWRQT44fQVzDbxOET03EZJGXiEX9yUDEDiDwe4 -H "Content-Type: text/csv"
+
+curl -X POST --data-binary @20200905/phys_parameters_quantum_efficiency.csv http://welsch.cyverse.org:8000/bety/api/v1/traits.csv?key=uaZWRQT44fQVzDbxOET03EZJGXiEX9yUDEDiDwe4 -H "Content-Type: text/csv"
+
+curl -X POST --data-binary @20200905/phys_parameters_stomatal_slope.BB.csv http://welsch.cyverse.org:8000/bety/api/v1/traits.csv?key=uaZWRQT44fQVzDbxOET03EZJGXiEX9yUDEDiDwe4 -H "Content-Type: text/csv"
+
+curl -X POST --data-binary @20200905/phys_parameters_cuticular_cond.csv http://welsch.cyverse.org:8000/bety/api/v1/traits.csv?key=uaZWRQT44fQVzDbxOET03EZJGXiEX9yUDEDiDwe4 -H "Content-Type: text/csv"
 ```
 
 
